--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,13 @@ dependencies:
   provider: ^6.0.4
   http: ^0.13.5
   image: ^3.2.2
+  pdf: ^3.8.4
+  dartx: ^1.1.0
+  firebase_ui_auth: ^1.1.2
+  flutter_bloc: ^8.1.1
+  dio: ^4.0.6
+  pretty_dio_logger: ^1.2.0-beta-1
+  generic_bloc_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +57,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
